# bigint

./: CMakeLists.txt  LICENCE  README.md  bigint.cpp
bench/: CMakeLists.txt  bench_all.cpp
cmake/: AddGtest.cmake  FindGMP.cmake  googlebench.cmake  googletest.cmake
include/: bigint.hpp
test/: test_bigint.cpp
